exports[`Header render with custom backgrund and theme 1`] = `
<div
  className={undefined}>
  <span
    className={undefined}>
    Dental Management
  </span>
  <div
    style={
      Object {
        "WebkitAppRegion": "drag",
        "WebkitUserSelect": "none",
        "alignItems": "center",
        "appRegion": "drag",
        "background": "black",
        "cursor": "default",
        "display": "flex",
        "height": "31px",
        "userSelect": "none",
        "visibility": "visible",
        "width": "100%"
      }
    }>
    <div
      style={
        Object {
          "WebkitUserSelect": "none",
          "color": "#ffffff",
          "cursor": "default",
          "flex": 1,
          "fontFamily": "\"Segoe UI\", \"Arial\"",
          "fontSize": "12px",
          "paddingLeft": "12px",
          "userSelect": "none"
        }
      }>
       
    </div>
    <div
      style={
        Object {
          "WebkitUserSelect": "none",
          "cursor": "default",
          "display": "flex",
          "height": "32px",
          "userSelect": "none"
        }
      }>
      <a
        data-radium={true}
        onClick={[Function onMinimizeClick]}
        onKeyDown={[Function anonymous]}
        onKeyUp={[Function anonymous]}
        onMouseDown={[Function anonymous]}
        onMouseEnter={[Function anonymous]}
        onMouseLeave={[Function anonymous]}
        style={
          Object {
            "WebkitAppRegion": "no-drag",
            "WebkitUserSelect": "none",
            "alignItems": "center",
            "appRegion": "no-drag",
            "cursor": "default",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
            "lineHeight": 0,
            "userSelect": "none",
            "width": "46px"
          }
        }
        title="Minimize">
        <svg
          data-radium={true}
          style={
            Object {
              "height": "10px",
              "width": "10px"
            }
          }
          viewBox="0 0 10.2 1"
          x="0px"
          y="0px">
          <rect
            fill="#ffffff"
            height="1"
            width="10.2" />
        </svg>
      </a>
      <a
        data-radium={true}
        onClick={[Function onMaximizeClick]}
        onKeyDown={[Function anonymous]}
        onKeyUp={[Function anonymous]}
        onMouseDown={[Function anonymous]}
        onMouseEnter={[Function anonymous]}
        onMouseLeave={[Function anonymous]}
        style={
          Object {
            "WebkitAppRegion": "no-drag",
            "WebkitUserSelect": "none",
            "alignItems": "center",
            "cursor": "default",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
            "lineHeight": 0,
            "userSelect": "none",
            "width": "46px"
          }
        }
        title="Maximize">
        <svg
          data-radium={true}
          style={
            Object {
              "height": "10px",
              "width": "10px"
            }
          }
          viewBox="0 0 10.2 10.1"
          x="0px"
          y="0px">
          <path
            d="M0,0v10.1h10.2V0H0z M9.2,9.2H1.1V1h8.1V9.2z"
            fill="#ffffff" />
        </svg>
      </a>
      <a
        data-radium={true}
        onClick={[Function noop]}
        onKeyDown={[Function anonymous]}
        onKeyUp={[Function anonymous]}
        onMouseDown={[Function anonymous]}
        onMouseEnter={[Function anonymous]}
        onMouseLeave={[Function anonymous]}
        style={
          Object {
            "WebkitAppRegion": "no-drag",
            "WebkitUserSelect": "none",
            "alignItems": "center",
            "cursor": "default",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
            "lineHeight": 0,
            "userSelect": "none",
            "width": "46px"
          }
        }
        title="Close">
        <svg
          data-radium={true}
          style={
            Object {
              "height": "10px",
              "width": "10px"
            }
          }
          viewBox="0 0 10.2 10.2"
          x="0px"
          y="0px">
          <polygon
            fill="#ffffff"
            points="10.2,0.7 9.5,0 5.1,4.4 0.7,0 0,0.7 4.4,5.1 0,9.5 0.7,10.2 5.1,5.8 9.5,10.2 10.2,9.5 5.8,5.1 " />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Header render with default props 1`] = `
<div
  className={undefined}>
  <span
    className={undefined}>
    Dental Management
  </span>
  <div
    style={
      Object {
        "WebkitAppRegion": "drag",
        "WebkitUserSelect": "none",
        "alignItems": "center",
        "appRegion": "drag",
        "background": "transparent",
        "cursor": "default",
        "display": "flex",
        "height": "31px",
        "userSelect": "none",
        "visibility": "visible",
        "width": "100%"
      }
    }>
    <div
      style={
        Object {
          "WebkitUserSelect": "none",
          "color": "#000000",
          "cursor": "default",
          "flex": 1,
          "fontFamily": "\"Segoe UI\", \"Arial\"",
          "fontSize": "12px",
          "paddingLeft": "12px",
          "userSelect": "none"
        }
      }>
       
    </div>
    <div
      style={
        Object {
          "WebkitUserSelect": "none",
          "cursor": "default",
          "display": "flex",
          "height": "32px",
          "userSelect": "none"
        }
      }>
      <a
        data-radium={true}
        onClick={[Function onMinimizeClick]}
        onKeyDown={[Function anonymous]}
        onKeyUp={[Function anonymous]}
        onMouseDown={[Function anonymous]}
        onMouseEnter={[Function anonymous]}
        onMouseLeave={[Function anonymous]}
        style={
          Object {
            "WebkitAppRegion": "no-drag",
            "WebkitUserSelect": "none",
            "alignItems": "center",
            "appRegion": "no-drag",
            "cursor": "default",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
            "lineHeight": 0,
            "userSelect": "none",
            "width": "46px"
          }
        }
        title="Minimize">
        <svg
          data-radium={true}
          style={
            Object {
              "height": "10px",
              "width": "10px"
            }
          }
          viewBox="0 0 10.2 1"
          x="0px"
          y="0px">
          <rect
            fill="#000000"
            height="1"
            width="10.2" />
        </svg>
      </a>
      <a
        data-radium={true}
        onClick={[Function onMaximizeClick]}
        onKeyDown={[Function anonymous]}
        onKeyUp={[Function anonymous]}
        onMouseDown={[Function anonymous]}
        onMouseEnter={[Function anonymous]}
        onMouseLeave={[Function anonymous]}
        style={
          Object {
            "WebkitAppRegion": "no-drag",
            "WebkitUserSelect": "none",
            "alignItems": "center",
            "cursor": "default",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
            "lineHeight": 0,
            "userSelect": "none",
            "width": "46px"
          }
        }
        title="Maximize">
        <svg
          data-radium={true}
          style={
            Object {
              "height": "10px",
              "width": "10px"
            }
          }
          viewBox="0 0 10.2 10.1"
          x="0px"
          y="0px">
          <path
            d="M0,0v10.1h10.2V0H0z M9.2,9.2H1.1V1h8.1V9.2z"
            fill="#000000" />
        </svg>
      </a>
      <a
        data-radium={true}
        onClick={[Function noop]}
        onKeyDown={[Function anonymous]}
        onKeyUp={[Function anonymous]}
        onMouseDown={[Function anonymous]}
        onMouseEnter={[Function anonymous]}
        onMouseLeave={[Function anonymous]}
        style={
          Object {
            "WebkitAppRegion": "no-drag",
            "WebkitUserSelect": "none",
            "alignItems": "center",
            "cursor": "default",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
            "lineHeight": 0,
            "userSelect": "none",
            "width": "46px"
          }
        }
        title="Close">
        <svg
          data-radium={true}
          style={
            Object {
              "height": "10px",
              "width": "10px"
            }
          }
          viewBox="0 0 10.2 10.2"
          x="0px"
          y="0px">
          <polygon
            fill="#000000"
            points="10.2,0.7 9.5,0 5.1,4.4 0.7,0 0,0.7 4.4,5.1 0,9.5 0.7,10.2 5.1,5.8 9.5,10.2 10.2,9.5 5.8,5.1 " />
        </svg>
      </a>
    </div>
  </div>
</div>
`;
